--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h2>I'm a web developer</h2>
         <h3><a href="./public/about me.html">A bit about me</a></h3>
         <hr>
-        <h3><a href="../2.4 Movie Ranking Project/index.html">Movie ranking project</a></h3>
+        <h3><a href="./public/my movie ranking.html">Movie ranking project</a></h3>
         <img src="./assets/images/1.png" height="200">
-        <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday invite project</a></h3>
+        <h3><a href="./public/my birthday invite.html">Birthday invite project</a></h3>
         <img src="./assets/images/2.png" height="200">
         <hr>
         <h4><a href="./public/contact me.html">Contact me here</a></h4>
